governance-shared/baselines/3.3.0/ChronoPM-Project/assets/templates/daily-todo-binding-template.md
---
doc_type: daily-todo-binding
date: YYYY-MM-DD
project: [子项目名]
---

# 当日待办绑定 - {YYYY-MM-DD} - {子项目名}

> 存储于 `todos/{YYYY-MM-DD}/_index.md`，为当天入口，记录当天有哪些人参与。历史日期通过目录遍历即可。

## 1. 当日参与人员

| Owner | 缩写 | File Ref | Todo Count | 来源（新建/结转） | Generated At | 备注 |
|---|---|---|---|---|---|---|
| [姓名] | [TD 编号缩写段] | todos/{date}/{姓名}.md | [N] | [新建/结转] | YYYY-MM-DD HH:MM | [在岗/请假/比例] |

> - **缩写**：当日引用。值必须抄自 `resources/resource-register.md`「TD 编号治理」小表的现行缩写；与 register 不一致时以 register 为准并 SUGGEST 修正 `_index`
> - **来源**：`新建` = 当日首次创建该人待办文件；`结转` = 含从前一日（或更早）结转而来的未办结待办（结转来源标注格式见 `personal-daily-todo-template.md` 备注区）
> - 同一人既含结转待办又有当日新建待办时，来源标 `结转`，新待办在本人待办文件内追加

## 2. 结转追溯标记（双层设计 + 日级完成标记）

> **设计原则**：
> 1. 每人独立的结转确认标记，避免"一人失败、全员重扫"
> 2. 日级完成标记，避免"每次创建文件都重复检查结转"

### 2.1 日级结转完成标记（最关键）

> **carryover_done_for_today**: [true / false]
> - 含义：**今天的结转动作是否已执行完毕**
> - `false`（或不存在）：今天的结转尚未执行 → AI 必须执行 Step 0
> - `true`：今天的结转已执行完毕 → AI **跳过 Step 0**，直接处理 PM 指示
> - **写入时机**：Step 0 执行完毕后，AI 在创建当天 `_index.md` 时写入此标记
> - **读取时机**：AI 每次需要为今天创建/更新任何人的待办文件时，先读取此标记

> **核心逻辑**：
> - 今天第一次创建待办文件 → `_index.md` 不存在或 `carryover_done_for_today` = false → 执行 Step 0 → 写入 `carryover_done_for_today` = true
> - 今天后续创建待办文件 → `_index.md` 存在且 `carryover_done_for_today` = true → **跳过 Step 0**
> - 明天 → 新的 `_index.md`，`carryover_done_for_today` = false → 重新执行 Step 0

### 2.2 全局追溯标记（历史快速路径）

> **carryover_traced_until**: [YYYY-MM-DD 或 "无"]
> - 含义：截至该日期，**所有人员**的历史结转都已确认完成
> - 作用：Step 0 执行时，确定每人需要回溯的历史范围
> - 首次创建时填"无"
> - 只有当扫描范围内**所有人员都成功结转**后才更新为 `date-1`
> - 若有任何人员结转失败，**不更新此标记**（保留旧值）

### 2.3 每人独立结转状态表

| 姓名 | 最后确认日期 | 状态 | 备注 |
|---|---|---|---|
| [姓名] | [YYYY-MM-DD] | [已确认/待处理/失败] | [失败原因/警告信息] |

> - **最后确认日期**：该人员结转已确认完成的最近日期
> - **状态**：
>   - `已确认`：该人员的结转已处理完毕，下次只需扫描此日期+1 之后的天数
>   - `待处理`：该人员尚未处理结转（首次出现/之前跳过）
>   - `失败`：该人员追溯失败（7 天内无文件），需人工介入
> - **备注**：记录失败原因或警告信息（如"7 天内无待办文件"）
> - **更新规则**：
>   - 每人独立更新，不受其他人影响
>   - 若某人结转成功 → 更新其"最后确认日期" = `date-1`，状态 = `已确认`
>   - 若某人结转失败 → 状态 = `失败`，记录警告，**不影响其他人的标记**

## 3. 当日待办概览

| 待办编号 | 标题 | 负责人 | WP Ref | 状态 | 结束时间 | 是否超期 |
|---|---|---|---|---|---|---|
| TD-xxx | [任务] | [姓名] | WP-NNN | [状态] | YYYY-MM-DD | 是/否 |

## 4. 共享人力提示（软兜底，T1/T3）

> 若当天涉及跨项目共享人力，软性提示其参与的其他项目排期，仅提示不代写（见 22 号 Step 0.5）。

- [姓名]：在 {其他子项目} 的 {日期} 已有 {N} 条待办（跨项目排期提示）。

## Revision Log

| Time | Change | Reason | Operator |
|---|---|---|---|
